# _Invisible_Girl_Game_

./: Animation.cpp  Animation.h  BT_ActionNodes.h  BaseUserInterface.h  Bitmask.cpp  Bitmask.h  Button.h  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  C_Animation.cpp  C_Animation.h  C_BehaviourApplier.cpp  C_BehaviourApplier.h  C_BoxCollider.cpp  C_BoxCollider.h  C_Camera.cpp  C_Camera.h  C_Collidable.cpp  C_Collidable.h  C_Collider.cpp  C_Collider.h  C_Dialogue.cpp  C_Dialogue.h  C_Direction.cpp  C_Direction.h  C_Drawable.cpp  C_Drawable.h  C_Events.cpp  C_Events.h  C_FollowMouse.h  C_InstanceID.cpp  C_InstanceID.h  C_InteractWithObjects.cpp  C_InteractWithObjects.h  C_Interactable.cpp  C_Interactable.h  C_InteractableTalking.cpp  C_InteractableTalking.h  (+100 more)
Assets/2DML_SET2/: mainlevbuild - Copy.sprites  mainlevbuild.xml
External_Libraries/: CMakeLists.txt
External_Libraries/imgui-sfml-master/: CMakeLists.txt
External_Libraries/tileson-master/: CMakeLists.txt
External_Libraries/tinyxml2-master/: DartConfiguration.tcl  tinyxml2.pc.gen
data/anim/: ANIM_Characters.xml  ANIM_Slime.xml
data/dialogue/: DialogueUIFormat.xml  (+2 more)
level_data/: 32x32_buildings.tsx  32x32_buildings_floors.tsx  32x32_buildings_furnitures.tsx  32x32_buildings_roofs.tsx  32x32_dec_props.tsx  32x32_main_lev.tsx  32x32_mainlev_hills.tsx  Harbor.tsx  MainLev.tsx  MainLev2.0.tsx  Ships.tsx  Town_1_data.json  Town_1_data.tmx  decorative_props.tsx  furniture.tsx  furnitures.tsx  houses.tsx  houses_outside.tsx  houses_outside_shadows.tsx  mainlevbuild.tsx  mainlevbuild1.tsx  other_props.tsx  rulebackground.tmx  rulebackground.txt  rulecliffs.tmx  rulecliffs.txt  rules.txt  smallobj.tsx  tree1B_ss.tsx  tree2B_ss.tsx  vegA1.tsx  walls,ground,decorative.tsx  water.tsx  water_env.tsx
(+17 files in other folders)
